@@ -11,7 +11,6 @@ import com.example.autoservice.service.MasterService;
 import io.swagger.v3.oas.annotations.Operation;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -60,7 +59,7 @@ public class MasterController {
     public List<OrderResponseDto> getOrders(@PathVariable Long id) {
         return masterService.getOrders(id).stream()
                 .map(orderResponseDtoMapper::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{id}/salary")
